--- a/api_spotify.ipynb
+++ b/api_spotify.ipynb
@@ -77,8 +77,8 @@
     "import time\n",
     "\n",
     "\n",
-    "client_id = \"74c534457f9a48519441324f96befeb1\"\n",
-    "client_secret = \"952b876684c540098591ed0d803a65f0\"\n",
+    "client_id = \"your_id\"\n",
+    "client_secret = \"your_secret\"\n",
     "\n",
     "class SpotifyApi(object):\n",
     "\n",
