--- a/notebook/api_spotify.ipynb
+++ b/notebook/api_spotify.ipynb
@@ -77,8 +77,8 @@
     "import time\n",
     "\n",
     "\n",
-    "client_id = \"your_id\"\n",
-    "client_secret = \"your_secret\"\n",
+    "client_id = \"client_id\"\n",
+    "client_secret = \"client_secret\"\n",
     "\n",
     "class SpotifyApi(object):\n",
     "\n",
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "861c0bbc",
    "metadata": {},
    "outputs": [],
@@ -199,123 +199,123 @@
      "output_type": "stream",
      "text": [
       "********************************\n",
-      "playlist number :  0\n",
-      "at the track : 1\n",
-      "at the track : 2\n",
-      "at the track : 3\n",
-      "at the track : 4\n",
-      "at the track : 5\n",
-      "at the track : 6\n",
-      "at the track : 7\n",
-      "at the track : 8\n",
-      "at the track : 9\n",
-      "at the track : 10\n",
-      "at the track : 11\n",
-      "at the track : 12\n",
-      "at the track : 13\n",
-      "at the track : 14\n",
-      "at the track : 15\n",
-      "at the track : 16\n",
-      "at the track : 17\n",
-      "at the track : 18\n",
-      "at the track : 19\n",
-      "at the track : 20\n",
-      "at the track : 21\n",
-      "at the track : 22\n",
-      "at the track : 23\n",
-      "at the track : 24\n",
-      "at the track : 25\n",
-      "at the track : 26\n",
-      "at the track : 27\n",
-      "at the track : 28\n",
-      "at the track : 29\n",
-      "at the track : 30\n",
-      "at the track : 31\n",
-      "at the track : 32\n",
-      "at the track : 33\n",
-      "at the track : 34\n",
-      "at the track : 35\n",
-      "at the track : 36\n",
-      "at the track : 37\n",
-      "at the track : 38\n",
-      "at the track : 39\n",
-      "at the track : 40\n",
-      "at the track : 41\n",
-      "at the track : 42\n",
-      "at the track : 43\n",
-      "at the track : 44\n",
-      "at the track : 45\n",
-      "at the track : 46\n",
-      "at the track : 47\n",
-      "at the track : 48\n",
-      "at the track : 49\n",
-      "at the track : 50\n",
-      "********************************\n",
       "playlist number :  1\n",
-      "at the track : 1\n",
-      "at the track : 2\n",
-      "at the track : 3\n",
-      "at the track : 4\n",
-      "at the track : 5\n",
-      "at the track : 6\n",
-      "at the track : 7\n",
-      "at the track : 8\n",
-      "at the track : 9\n",
-      "at the track : 10\n",
-      "at the track : 11\n",
-      "at the track : 12\n",
-      "at the track : 13\n",
-      "at the track : 14\n",
-      "at the track : 15\n",
-      "at the track : 16\n",
-      "at the track : 17\n",
-      "at the track : 18\n",
-      "at the track : 19\n",
-      "at the track : 20\n",
-      "at the track : 21\n",
-      "at the track : 22\n",
-      "at the track : 23\n",
-      "at the track : 24\n",
-      "at the track : 25\n",
-      "at the track : 26\n",
-      "at the track : 27\n",
-      "at the track : 28\n",
-      "at the track : 29\n",
-      "at the track : 30\n",
-      "at the track : 31\n",
-      "at the track : 32\n",
-      "at the track : 33\n",
-      "at the track : 34\n",
-      "at the track : 35\n",
-      "at the track : 36\n",
-      "at the track : 37\n",
-      "at the track : 38\n",
-      "at the track : 39\n",
-      "at the track : 40\n",
-      "at the track : 41\n",
-      "at the track : 42\n",
-      "at the track : 43\n",
-      "at the track : 44\n",
-      "at the track : 45\n",
-      "at the track : 46\n",
-      "at the track : 47\n",
-      "at the track : 48\n",
-      "at the track : 49\n",
-      "at the track : 50\n",
+      "at the track :  1\n",
+      "at the track :  2\n",
+      "at the track :  3\n",
+      "at the track :  4\n",
+      "at the track :  5\n",
+      "at the track :  6\n",
+      "at the track :  7\n",
+      "at the track :  8\n",
+      "at the track :  9\n",
+      "at the track :  10\n",
+      "at the track :  11\n",
+      "at the track :  12\n",
+      "at the track :  13\n",
+      "at the track :  14\n",
+      "at the track :  15\n",
+      "at the track :  16\n",
+      "at the track :  17\n",
+      "at the track :  18\n",
+      "at the track :  19\n",
+      "at the track :  20\n",
+      "at the track :  21\n",
+      "at the track :  22\n",
+      "at the track :  23\n",
+      "at the track :  24\n",
+      "at the track :  25\n",
+      "at the track :  26\n",
+      "at the track :  27\n",
+      "at the track :  28\n",
+      "at the track :  29\n",
+      "at the track :  30\n",
+      "at the track :  31\n",
+      "at the track :  32\n",
+      "at the track :  33\n",
+      "at the track :  34\n",
+      "at the track :  35\n",
+      "at the track :  36\n",
+      "at the track :  37\n",
+      "at the track :  38\n",
+      "at the track :  39\n",
+      "at the track :  40\n",
+      "at the track :  41\n",
+      "at the track :  42\n",
+      "at the track :  43\n",
+      "at the track :  44\n",
+      "at the track :  45\n",
+      "at the track :  46\n",
+      "at the track :  47\n",
+      "at the track :  48\n",
+      "at the track :  49\n",
+      "at the track :  50\n",
       "********************************\n",
       "playlist number :  2\n",
-      "at the track : 1\n",
-      "at the track : 2\n",
-      "at the track : 3\n",
-      "at the track : 4\n",
-      "at the track : 5\n",
-      "at the track : 6\n",
-      "at the track : 7\n",
-      "at the track : 8\n",
-      "at the track : 9\n",
-      "at the track : 10\n",
-      "at the track : 11\n",
-      "at the track : 12\n"
+      "at the track :  1\n",
+      "at the track :  2\n",
+      "at the track :  3\n",
+      "at the track :  4\n",
+      "at the track :  5\n",
+      "at the track :  6\n",
+      "at the track :  7\n",
+      "at the track :  8\n",
+      "at the track :  9\n",
+      "at the track :  10\n",
+      "at the track :  11\n",
+      "at the track :  12\n",
+      "at the track :  13\n",
+      "at the track :  14\n",
+      "at the track :  15\n",
+      "at the track :  16\n",
+      "at the track :  17\n",
+      "at the track :  18\n",
+      "at the track :  19\n",
+      "at the track :  20\n",
+      "at the track :  21\n",
+      "at the track :  22\n",
+      "at the track :  23\n",
+      "at the track :  24\n",
+      "at the track :  25\n",
+      "at the track :  26\n",
+      "at the track :  27\n",
+      "at the track :  28\n",
+      "at the track :  29\n",
+      "at the track :  30\n",
+      "at the track :  31\n",
+      "at the track :  32\n",
+      "at the track :  33\n",
+      "at the track :  34\n",
+      "at the track :  35\n",
+      "at the track :  36\n",
+      "at the track :  37\n",
+      "at the track :  38\n",
+      "at the track :  39\n",
+      "at the track :  40\n",
+      "at the track :  41\n",
+      "at the track :  42\n",
+      "at the track :  43\n",
+      "at the track :  44\n",
+      "at the track :  45\n",
+      "at the track :  46\n",
+      "at the track :  47\n",
+      "at the track :  48\n",
+      "at the track :  49\n",
+      "at the track :  50\n",
+      "********************************\n",
+      "playlist number :  3\n",
+      "at the track :  1\n",
+      "at the track :  2\n",
+      "at the track :  3\n",
+      "at the track :  4\n",
+      "at the track :  5\n",
+      "at the track :  6\n",
+      "at the track :  7\n",
+      "at the track :  8\n",
+      "at the track :  9\n",
+      "at the track :  10\n",
+      "at the track :  11\n",
+      "at the track :  12\n"
      ]
     }
    ],
@@ -456,7 +456,7 @@
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.base.Connection at 0x244caf85988>"
+       "<sqlalchemy.engine.base.Connection at 0x2334d96d348>"
       ]
      },
      "execution_count": 17,
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "932d227e",
    "metadata": {},
    "outputs": [
@@ -513,7 +513,7 @@
     "                                                                                          x.id_playlist+x.id_artiste,\n",
     "                                                                                          axis=1)\n",
     "\n",
-    "        ## on crée une clé sur la playlist-artiste dans les nouvelles détections\n",
+    "        ## on crée une clé sur la playlist-artiste des nouvelles détections\n",
     "        df_table1[\"new_artistes\"]=df_table1[[\"id_playlist\",\"id_artiste\"]].apply(lambda x:(x.id_playlist+x.id_artiste),axis=1)\n",
     "\n",
     "        ## on prend les artistes détectés aujourd'hui & qui ne sont pas dans l'historique\n",
@@ -525,13 +525,20 @@
     "            df_table1[\"new_artistes\"].values.tolist())].artiste_histo.values.tolist()\n",
     "\n",
     "        if len(artistes_to_update)>0:\n",
-    "            histo_playlist[\"date_sortie\"]=histo_playlist[[\"ariste_histo\",\"date_sortie\"]].apply(\n",
-    "                lambda x:datetime.now() if (x.ariste_histo in artistes_to_update) \n",
-    "                else x.date_sortie, axis=1).drop(\"artiste_histo\",axis=1)\n",
+    "            histo_playlist[\"date_sortie\"]=histo_playlist[[\"artiste_histo\",\"date_sortie\"]].apply(\n",
+    "                lambda x:datetime.now() if (x.artiste_histo in artistes_to_update) \n",
+    "                else x.date_sortie, axis=1)\n",
     "\n",
+    "        histo_playlist=histo_playlist.drop(\"artiste_histo\",axis=1)\n",
+    "        \n",
+    "        ## si on a bien des nouveaux artistes on les ajoute à l'historique\n",
     "        if artistes_to_append.shape[0]>0:\n",
-    "            dffinal=pd.concat([artistes_to_append,histo_playlist.drop(\"artiste_histo\",axis=1)])\n",
-    "\n",
+    "            dffinal=pd.concat([artistes_to_append,])\n",
+    "            \n",
+    "        else:\n",
+    "            dffinal=histo_playlist\n",
+    "            \n",
+    "            \n",
     "        dffinal.to_sql(\"histo_playlist\", dbConnection, if_exists='replace', index=False)\n",
     "        \n",
     "        print(\"new data added \")\n",
