--- a/notebook/api_spotify.ipynb
+++ b/notebook/api_spotify.ipynb
@@ -77,8 +77,8 @@
     "import time\n",
     "\n",
     "\n",
-    "client_id = \"client_id\"\n",
-    "client_secret = \"client_secret\"\n",
+    "client_id = \"client id\"\n",
+    "client_secret = \"client secret\"\n",
     "\n",
     "class SpotifyApi(object):\n",
     "\n",
